--- a/stuff.html
+++ b/stuff.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>Home | CorruptedAnt</title>
+    <title>Stuff | CorruptedAnt</title>
     <meta charset="utf-8" />
     <meta name="Author" content="corruptedant" />
     <meta
@@ -39,27 +39,8 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/stuff.html">stuff</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link disabled"
-                  href="#"
-                  tabindex="-1"
-                  aria-disabled="true"
-                  >Disabled</a
+                <a class="nav-link active" aria-current="page" href="/stuff.html"
+                  >stuff</a
                 >
               </li>
             </ul>
@@ -72,9 +53,9 @@
       <h2>Anicration-GUI</h2>
       <p class="lead">
         My first entry into web development. After being frustrated at using
-        Tkinter, I decided to choose web dev as a way to get a GUI going.
-        After a bit of researching, I found out that GUI on webapps are very
-        easy with Bootstrap.
+        Tkinter, I decided to choose web dev as a way to get a GUI going. After
+        a bit of researching, I found out that GUI on webapps are very easy with
+        Bootstrap.
       </p>
       <p class="lead">
         However, I only knew Python at the time, so I spent some months learning
@@ -94,35 +75,44 @@
         by Django.
       </p>
       <img src="/static/vuedj_anigui.jpg" width="800" alt="" />
-      <p><em>It's very much unfinished. At least it now displays likes and retweets!</em></p>
+      <p>
+        <em
+          >It's very much unfinished. At least it now displays likes and
+          retweets!</em
+        >
+      </p>
       <p class="lead">
-          This relies on django-manifest-loader to serve the production 
-          build of Vue. It's also my first foray into Javascript, as I haven't got
-          into learning Javascript yet.
+        This relies on django-manifest-loader to serve the production build of
+        Vue. It's also my first foray into Javascript, as I haven't got into
+        learning Javascript yet.
       </p>
       <hr />
       <h2>Segway: Seemless development between Vue and Django</h2>
       <p class="lead">
-        This took me a lot of trail and error to get right. Initially, I wanted to quickly be
-        able to develop with the power of Vue's hot reload whilist having Django serving the file.
-        This turned out to be a step in the wrong direction. I was fumbling with webpacks and
-        django-webpack-loader it was a hell of a nightmare.
+        This took me a lot of trail and error to get right. Initially, I wanted
+        to quickly be able to develop with the power of Vue's hot reload whilist
+        having Django serving the file. This turned out to be a step in the
+        wrong direction. I was fumbling with webpacks and django-webpack-loader
+        it was a hell of a nightmare.
       </p>
       <p class="lead">
-        In the end, the right answer was not to do that. It was to separate the front end from the
-        backend. You can either do CORS/CSP, or you can use devServer:proxy on vue.config.js
-        to pass backend's port over if you plan on using Django to serve file(also SessionAuthentication).
+        In the end, the right answer was not to do that. It was to separate the
+        front end from the backend. You can either do CORS/CSP, or you can use
+        devServer:proxy on vue.config.js to pass backend's port over if you plan
+        on using Django to serve file(also SessionAuthentication).
       </p>
       <hr />
       <h2>Quicktrack</h2>
       <p class="lead">
-          This is the first Webapp that I put my full effort into. It's a hutang tracking Webapp using the
-          same techstack(Vue & Django, additionally Django REST). Hutang here means debt.
+        This is the first Webapp that I put my full effort into. It's a hutang
+        tracking Webapp using the same techstack(Vue & Django, additionally
+        Django REST). Hutang here means debt.
       </p>
       <p class="lead">
-          I needed an app to quickly track how much people owe me, so I made it. It is also the first
-          application that has real world use for me(even till this day!).
-    </p>
+        I needed an app to quickly track how much people owe me, so I made it.
+        It is also the first application that has real world use for me(even
+        till this day!).
+      </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
